Fixed image shatter overlaps, improved z index overlap detection, shards rotate over self center rather than canvas/group center; Imrpoved first three.js first canvas render

--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -14,11 +14,11 @@
     position: fixed;
     top: 0;
     left: 0;
-    transition:  box-shadow 0.5s, height 0.3s ease-out;
+    transition: box-shadow 0.5s, height 0.3s ease-out;
 
     &.compact {
       height: 50px;
-      transition:  box-shadow 0.5s, height 0.3s ease-in-out;
+      transition: box-shadow 0.5s, height 0.3s ease-in-out;
     }
   }
 
@@ -27,5 +27,10 @@
     width: 100%;
     height: 150px;
   }
+}
 
+#header-placeholder.resizable,
+app-nav.resizable {
+  height: 50px;
+  transition: none;
 }
